--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
 	"name": "sqjs",
 	"version": "0.8.0",
-	"repository": "https://github.com/luiges90/sqjs",
+	"licenses": "FreeBSD",
+	"repository": {
+		"type": "git",
+		"url": "http://github.com/luiges90/sqjs.git"
+	},
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-contrib-uglify": "~0.2.2",
